--- a/registration2/.settings/org.eclipse.wst.common.component
+++ b/registration2/.settings/org.eclipse.wst.common.component
@@ -1,8 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?><project-modules id="moduleCoreId" project-version="1.5.0">
-    <wb-module deploy-name="registration2">
+        
+    <wb-module deploy-name="registration-details">
+                
         <wb-resource deploy-path="/" source-path="/WebContent" tag="defaultRootSource"/>
+                
         <wb-resource deploy-path="/WEB-INF/classes" source-path="/src"/>
-        <property name="context-root" value="registration2"/>
-        <property name="java-output-path" value="/registration2/build/classes"/>
+                
+        <property name="java-output-path" value="/registration-details/build/classes"/>
+        <property name="context-root" value="registration-details"/>
+            
     </wb-module>
+    
 </project-modules>
